# neglectedFraction

./: CMakeLists.txt  experimentalTOT.cpp  experimentalTOT.h  main.cpp  simulatedCompton.cpp  simulatedCompton.h
